# everlog-memory-mcp

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
docs/: AGENT_DEMO.md  ARCHITECTURE.md  ARTIFACT_SCHEMA.md  EVERLOG.md  ITERATION_PLAN.md  MCP_CLIENTS.md  MEMORY_SYSTEM.md  PRODUCT_DIRECTION.md  PRODUCT_NOTES.md  REAL_EVERLOG_SETUP.md  REFLECTION_WORKFLOW.md  SECURITY.md
everlog_memory_mcp/: __init__.py  artifacts.py  cli.py  client_config.py  config.py  demo_server.py  everlog_json.py  indexer.py  insights.py  launch_agent.py  mcp_server.py  models.py  parser.py  reflections.py  search.py  store.py  tools.py  watcher.py
examples/: 2026-06-01-sample.md  artifact.example.json  config.example.json
examples/everlog-json/: Entries.json
web/: app.js  index.html  styles.css
